# api-benchmarking

./: Dockerfile  docker-compose.yml  pyproject.toml
benchmarks/: run.js
my_api/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
my_api/my_api/: main.py
scripts/: seed.sh
