[project]
name = "api-benchmarking"
version = "0.1.0"
description = ""
authors = [
  { name = "Andrew Chang", email = "89715746+itsmandrew@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi (>=0.135.3,<0.136.0)", "uvicorn (>=0.42.0,<0.43.0)", "sqlalchemy (>=2.0.48,<3.0.0)", "psycopg2-binary (>=2.9.11,<3.0.0)"]

[tool.poetry]
packages = [{ include = "my_api" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
